--- a/Ödev-1/index.html
+++ b/Ödev-1/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <h1>Lütfiye Gül YILMAZ</h1>
     <h2>Hakkımda</h2> 
@@ -12,6 +13,19 @@
         Merhaba ben Lütfiye Gül YILMAZ.
         <br>
         Yazılım Mühendisliği 4.sınıf öğrencisiyim.Knedimi geliştirmeyi ve sanatsal şeylerle ilgilenmeyi seviyorum.
-    </p>  
+    </p> 
+    <h2>İLGİ ALANLARIM</h2>
+    <ol>
+        <li>Yoga</li>
+        <li>Dans</li>
+        <li>Keman</li>
+    </ol>
+     <hr>
+    <h2>Sevdiğim Film Listesi</h2>
+       <img src="Life.jpg" alt="Life is Beautiful" widht="200" height = "650">
+       <hr>
+       <h2>Dinlemeyi Sevdiklerim </h2>
+       <img src="music.jpg" alt="Playlist" widht = "200" height="400"
+
 </body>
 </html>
